[package]
name = "zrc_server"
version = "0.1.0"
authors = ["陆离 <sirzenith@163.com>"]
edition = "2018"

# ["lib"]
# name = "zrc_server"
# crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
askama = "0.8"
lazy_static = "1.4.0"
r2d2_sqlite = "0.17.0"
r2d2 = "0.8.9"
rusqlite = "0.24.1"
# rusqlite = { version = "0.24.1", features = ["bundled"] }
strfmt = "0.1.6"
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
structopt= "0.3.20"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
