[package]
name = "zrc_server"
version = "0.1.0"
authors = ["陆离 <sirzenith@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
askama = "0.8"
lazy_static = "*"
log = "*"
simple_logger = "*"
r2d2_sqlite = "0.17.*"
r2d2 = "0.8.*"
rusqlite = "0.24.1"
strfmt = "0.1.6"
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
structopt= "0.3.20"
thiserror = "*"
tokio = { version = "0.2", features = ["full"] }
warp = "*"
