[package]
name = "zrc_server"
version = "0.1.0"
authors = ["陆离 <sirzenith@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
askama = "0.10.5"
base64 = "0.13.0"
chrono = "0.4"
jsonwebtoken = "7"
lazy_static = "1.4.0"
log = "0.4.14"
md5 = "0.7.0"
r2d2_sqlite = "0.18.0"
r2d2 = "0.8.9"
rusqlite = "0.25.3"
simple_logger = "1.11.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
strfmt = "0.1.6"
structopt = "0.3.21"
thiserror = "1.0.25"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
